--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.0",
     "express": "^4.15.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "style-loader": "^0.16.1",
     "webpack": "^2.3.2"
-  },
-  "devDependencies": {
-    "css-loader": "^0.28.0",
-    "style-loader": "^0.16.1"
   }
 }
